Use .env file and traefik_web network
Load environment variables from .env and attach the deployment container to the traefik_web network. This updates the GitHub Actions deploy workflow so `docker run` includes `--env-file .env` and replaces the `traefik` network with `traefik_web` for correct Traefik routing.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,8 +84,9 @@ jobs:
 
             docker run -d \
               --name clawbrick-dev \
+              --env-file .env \
               --restart unless-stopped \
-              --network traefik \
+              --network traefik_web \
               -p 9083:3000 \
               --label "traefik.enable=true" \
               --label "traefik.http.routers.clawbrick-dev.rule=Host(\`clawbrick.com\`)" \
